syntax = "proto3";

option csharp_namespace = "TradeBot.License.LicenseService.v1";

package license;

service License {
	rpc SetLicense (SetLicenseRequest) returns (SetLicenseResponse);
	rpc LicenseCheck (LicenseCheckRequest) returns (LicenseCheckResponse); // Метод для сервиса Account
	rpc GetKey(GetKeyRequest) returns (GetKeyResponse); // Метод для сайта
}

message SetLicenseRequest {
	int32 account_id = 1;
	ProductCode product = 2;
}

message SetLicenseResponse {
	LicenseCode code = 1;
	string message = 2;
}

message LicenseCheckRequest {
	int32 account_id = 1;
	string key = 2;
	ProductCode product = 3;
}

message LicenseCheckResponse {
	LicenseCode code = 1;
	string message = 2;
	bool have_access = 3;
}

message GetKeyRequest {
	int32 account_id = 1;
	string password = 2;
	string verify_password = 3;
}

message GetKeyResponse {
	LicenseCode code = 1;
	string message = 2;
	string key = 3;
}

enum LicenseCode {
	LICENSE_CODE_UNSPECIFIED = 0;
	LICENSE_CODE_SUCCESSFUL = 1;
	LICENSE_CODE_IS_EXISTS = 2;
	LICENSE_CODE_HAVE_ACCESS = 3;
	LICENSE_CODE_NO_ACCESS = 4;
}

enum ProductCode {
	PRODUCT_CODE_UNSPECIFIED = 0;
	PRODUCT_CODE_TRADEBOT = 1;
}